--- a/patrickvarin_2012_11_14/styles/main.css
+++ b/patrickvarin_2012_11_14/styles/main.css
@@ -114,7 +114,7 @@ min-height:inherit;
 	float:left;
 }
 
-.grid-item-overlay-visible{
+.grid-item-overlay{
 	position:absolute;
 	width:inherit;
 	height:inherit;
@@ -125,20 +125,14 @@ min-height:inherit;
 	font: normal normal normal 13px/1.4em Helvetica, Arial, sans-serif;
 }
 
-.grid-item-overlay-visible > h3{
+.grid-item-overlay > h3{
 	padding-top:0;
 	margin-top:0;
 	text-align:center;
 }
-.grid-item-overlay-visible > p{
+.grid-item-overlay > p{
 	padding-left:5%;
 	color:#D0D0D0;
-}
-.grid-item-overlay-hidden *{
-	visibility:hidden;
-	height:0;
-	padding:0;
-	margin:0;
 }
 
 .content-grid-wrapper-visible>div img{
